# cargo-deny

./: CHANGELOG.md  Cargo.toml  deny.toml
docs/src/cli/: check.md  common.md  fetch.md  init.md  list.md
src/: bans.rs  cfg.rs  git.rs  lib.rs  licenses.rs
src/advisories/: cfg.rs
src/advisories/helpers/: db.rs
src/bans/: cfg.rs  diags.rs  replacements.rs
src/cargo-deny/: check.rs  common.rs  fetch.rs  init.rs  list.rs  main.rs
src/licenses/: gather.rs
src/snapshots/: cargo_deny__diag__test__codes_unique.snap
tests/: bans.rs  bans_build.rs  licenses.rs  sarif.rs
tests/cfg/: bans.toml
tests/snapshots/: bans__bans::std_replacement_downgrades__defaults.snap  bans__bans::std_replacement_ignore__no-hit.snap  bans__bans::std_replacements_by_scope__all__transitive.snap  bans__bans::std_replacements_by_scope__transitive__transitive.snap  bans__bans_std_replacements_by_scope__workspace__none.snap  bans_build__allows_build_scripts_or_bypass.snap  bans_build__detects_build_script_mismatch.snap  cargo_deny__test__cargo_deny-check.snap  cargo_deny__test__cargo_deny-fetch.snap  cargo_deny__test__cargo_deny-init.snap  cargo_deny__test__cargo_deny-list.snap  cargo_deny__test__cargo_deny.snap  licenses__licenses::lists_licenses-json-license.snap  licenses__licenses::lists_licenses-tsv-license.snap  licenses__licenses_lists_licenses-human-crate.snap  licenses__licenses_lists_licenses-human-license.snap  licenses__licenses_lists_licenses-json-crate.snap
tests/test_data/non-default-build-script/: Cargo.toml
tests/test_data/std-replacements/: Cargo.toml
(+2 files in other folders)
